tests/negative/gold/bad_parameter2_test.gold
tests/negative/bad_parameter2_test.toit:5:8: error: Missing parameter name
foo x [] x:
       ^
tests/negative/bad_parameter2_test.toit:8:7: error: Unexpected token: break
bar x break y:
      ^~~~~
tests/negative/bad_parameter2_test.toit:11:9: error: Unexpected token: =
gee y=3 =:
        ^
tests/negative/bad_parameter2_test.toit:14:9: error: Invalid parameter name
foobar [:
        ^
tests/negative/bad_parameter2_test.toit:14:9: error: Missing ']' for block parameter
foobar [:
        ^
tests/negative/bad_parameter2_test.toit:5:10: error: Duplicate parameter 'x'
foo x [] x:
         ^
tests/negative/bad_parameter2_test.toit:5:5: note: First declaration of 'x'
foo x [] x:
    ^
tests/negative/bad_parameter2_test.toit:6:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/bad_parameter2_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/bad_parameter2_test.toit:12:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/bad_parameter2_test.toit:15:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/bad_parameter2_test.toit:18:3: error: Argument mismatch for 'foo'
Too few arguments provided
  foo 3
  ^~~
tests/negative/bad_parameter2_test.toit:19:3: error: Argument mismatch for 'bar'
Too many arguments provided
  bar 1 2 3
  ^~~
Compilation failed.
